[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audiograph"
version = "1.0.1"
authors = [
  { name="Bassil Ghareeb", email="bghareeb1674@floridapoly.edu" }, { name="Arselle Conteh", email="aconteh3672@floridapoly.edu",
]
description = "A small example package"
readme = "README.txt"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/leChickenfish/CSPS_Final"
Issues = "https://github.com/leChickenfish/CSPS_Final/issues"
Changelog = "https://github.com/leChickenfish/CSPS_Final/blob/master/Changelog.md"